# gofannon

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  manifest.json  pyproject.toml  why_the_name_gofannon.md
.github/: labeler.yml  points_config.json  release-drafter.yml
.github/ISSUE_TEMPLATE/: agentic_framework.md  bug_report.md  function_proposal.md  generic_issue.md
.github/PULL_REQUEST_TEMPLATE/: config.yml  docs_website_pr.md  general_code_pr.md
.github/scripts/: calculate_leaderboard.js  first-time-contributor.sh  generate-roadmap.js  generate_scoring_html.js  generate_version.py  package-lock.json  package.json  pr_review_checks.py  publish-release.js  review_pr.py  stats_collector.py
.github/workflows/: build-site.yml  check_markdown_links.yml  collect_metrics.yml  comments-based-on-label.yml  first-contribution-label.yml  integration-tests.yml  leaderboard.yml  pr-labeler.yml  pr_review.yml  publish-to-pypi.yml  roadmap-generator.yml  stats-collector.yml  unit-tests.yml
_site/: CONTRIBUTING.md  README.md  ROADMAP.md
_site/examples/: Complex_Math.ipynb  Headless_Browser_GET.ipynb  Ollama_Example.ipynb  Sequential_CoT.ipynb
_site/gofannon/: cli.py
_site/tests/: test_arxiv.py  test_basic_math.py  test_github.py  test_open_notify_space.py
_site/website/: about.html  how-tos.html  index.html
docs/: LOGGING.md  cross-framework_compatibility.md  functions_and_tools_overview.md  how_to_contribute.md  index.md  quickstart.md
docs/arxiv/: get_article.md  index.md  search.md
docs/basic_math/: addition.md  division.md  multiplication.md
docs/file/: list_directory.md  read_file.md  write_file.md
docs/get_url_content/: get_url_content.md  index.md
docs/github/: clone_repo.md  commit_files.md  create_issue.md  index.md  list_issues.md  list_repo_files.md  pr_review.md  read_file.md  read_issue.md
docs/google_search/: google_search.md  index.md
docs/grant_query/: grant_query.md  index.md
docs/headless_browser/: headless_browser_get.md  index.md
docs/mcp/: index.md
docs/nasa/: apod.md  index.md
docs/nhsta/: index.md
docs/open_notify_space/: index.md  open_notify_space..md  open_notify_space.md
docs/pdf_reader/: index.md  pdf_reader.md
docs/reasoning/: index.md  sequential_cot.md  tree_of_thought.md
docs/simpler_grants_gov/: get_opportunity.md  index.md  list_agencies.md  query_by_applicant_eligibility.md  query_by_assistance_listing.md  query_by_award_criteria.md  query_by_dates.md  query_by_funding_details.md  query_by_multiple_criteria.md  query_opportunities.md  query_opportunities_by_agency.md  search_agencies.md
docs/wikipedia/: index.md  wikipedia.md
examples/: ArXiv.ipynb  Basic_Math.ipynb  Complex_Math.ipynb  Github+Multiple_Calls.ipynb  Github+Sequential_Functions.ipynb  Google_Search.ipynb  Hierarchical_CoT.ipynb  Langchain+APOD.ipynb  Llamastack+GoogleSearch.ipynb  MCP_Server_with_Gofannon_Tools.ipynb  NHTSA Function Example.ipynb  Ollama_Example.ipynb  Tree_of_Thought.ipynb  apod.ipynb  smolagents+gofannon_quickstart.ipynb  smolagents+simpler_grants_gov.ipynb  smolagents+vibecoding_max_level.ipynb  vertexai.ipynb
gofannon/: config.py
gofannon/arxiv/: __init__.py  get_article.py
gofannon/base/: __init__.py  adk_mixin.py  bedrock.py  langchain.py  langflow.py  llamastack.py  mcp.py  smol_agents.py
gofannon/basic_math/: __init__.py  addition.py  multiplication.py
gofannon/cat_fact/: catfact.py
gofannon/file/: list_directory.py  read_file.py  write_file.py
gofannon/get_url_content/: get_url_content.py
gofannon/github/: __init__.py  clone_repo.py  commit_files.py  create_issue.py  get_repo_contents.py  list_issues.py  list_repo_files.py  pr_review_tool.py  read_file.py  read_issue.py  search.py
scripts/: build_lambda.sh
tests/: test_arxiv.py  test_basic_math.py  test_clone_repo.py  test_github.py  test_headless_browser.py  test_integrations.py  test_list_directory.py  test_list_issues.py  test_open_notify_space.py  test_read_file.py  test_reasoning.py  test_write_file.py
website/: .gitignore  Gemfile  _config.yml  _config_rtd.yml  about.md  index.md  leaderboard.md  powered_by.md
(+100 files in other folders)
