[tool.poetry]
name = "gofannon"
version = "0.25.16"
description = "A collection of tools for LLMs"
authors = ["Trevor Grant <trevor.d.grant@gmail.com>"]
license = "ASFv2"
readme = "README.md"
packages = [{include = "gofannon"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openai = "^1.60.2"
requests = "^2.32.3"
GitPython = "^3.1.43"
python-dotenv = "^1.0.1"
jsonschema = "^4.23.0"
pygithub = "^2.6.1"

# Optional dependencies
pytest = { version = "^8.3.5", optional = true }
langchain-core = { version = "^0.3.16", optional = true, python = "<3.13" }
pydantic = { version = "^2.10.6", optional = true }
smolagents = { version = "^1.6.0", optional = true }
selenium = { version = "^4.10.0", optional = true }
google-api-python-client = { version = "^2.154.0", optional = true }
requests-mock = { version = "^1.12.1", optional = true }
boto3 = { version = "^1.34.97", optional = true }
anyio = { version = "^4.9.0", optional = true}

[tool.poetry.extras]
testing = ["pytest", "requests-mock"]
langchain = ["langchain-core", "pydantic"]
smolagents = ["smolagents"]
headless_browser = ["selenium"]
google = ["google-api-python-client"]
aws = ["boto3"]
langflow = []

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
responses = "^0.25.7"
pytest-asyncio = "0.26.0"
mcp = "1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"